--- a/HolaMundo/bin/.gitignore
+++ b/HolaMundo/bin/.gitignore
@@ -5,3 +5,8 @@
 /UsoOperadores.class
 /Uso_Math.class
 /ejercicios/
+/ClaseString.class
+/Operadores.class
+/Constantes_y_Variables.class
+/Clase_Math.class
+/Hola_Mundo.class
